--- a/client-app/src/app/home/equipo/add-equipo/add-equipo.component.html
+++ b/client-app/src/app/home/equipo/add-equipo/add-equipo.component.html
@@ -83,19 +83,19 @@
       <clr-input-container>
         <label>Fecha Compra:</label>
         <input clrInput type="date" [(ngModel)]="fechaCompra" name="fechaCompra"
-               min="1990-01-01" max="2050-12-31" tabindex="6"/>
+               min="1990-01-01" max="2050-12-31"/>
       </clr-input-container>
 
       <clr-input-container>
         <label>Vto. Garantia:</label>
         <input clrInput type="date" [(ngModel)]="fechaVenGarantia" name="fechaVenGarantia"
-               min="1990-01-01" max="2050-12-31" tabindex="6"/>
+               min="1990-01-01" max="2050-12-31"/>
       </clr-input-container>
 
       <clr-input-container>
         <label>Puesta en Marcha:</label>
         <input clrInput type="date" [(ngModel)]="fechaInstalacion" name="fechaInstalacion"
-               min="1990-01-01" max="2050-12-31" tabindex="6"/>
+               min="1990-01-01" max="2050-12-31"/>
       </clr-input-container>
 
       <clr-input-container>
@@ -191,7 +191,7 @@
       </a>
     </div>
   </div>
-  <br><br>
+  <br/><br/>
   <div class="clr-row clr-justify-content-start">
     <button class="btn btn-sm btn-success"
             [disabled]="(equipoForm.form.invalid )"
