--- a/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.css
+++ b/client-app/src/app/home/contrato/edit-contrato/edit-contrato.component.css
@@ -37,17 +37,14 @@
   display: block;
 }
 
-.select .select-form-contrato {
-  border: 1px solid rgba(34, 36, 38, 0.50) !important;
-  border-radius: 0 !important;
-  border-image: initial !important;
-  -webkit-appearance: menulist !important;
-  align-items: center !important;
-  background-color: white !important;
-  cursor: default;
-  background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
-  height: 30px !important;
-  margin-left: 1% !important;
+.tamanho-total {
   width: 100% !important;
-  display: block;
+}
+
+.tamanho-medio{
+  width: 50% !important;
+}
+
+.btn-add-equipo {
+  margin-bottom: 1% !important;
 }
